[gd_scene load_steps=2 format=3 uid="uid://cpatheditor"]

[ext_resource type="Script" path="res://scripts/tools/path_editor.gd" id="1_script"]

[node name="PathEditor" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
offset_left = 0.0
offset_right = 880.0
offset_bottom = 720.0
expand_mode = 1
stretch_mode = 5

[node name="Line2D" type="Line2D" parent="."]
width = 40.0
default_color = Color(0.6, 0.5, 0.3, 0.7)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainLayout" type="HBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapArea" type="Control" parent="UI/MainLayout"]
custom_minimum_size = Vector2(880, 720)
layout_mode = 2

[node name="MapLabel" type="Label" parent="UI/MainLayout/MapArea"]
offset_left = 10.0
offset_top = 690.0
offset_right = 300.0
offset_bottom = 715.0
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "Map Name"

[node name="Sidebar" type="PanelContainer" parent="UI/MainLayout"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="UI/MainLayout/Sidebar"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="FileSection" type="VBoxContainer" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="FileLabel" type="Label" parent="UI/MainLayout/Sidebar/VBox/FileSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = "FILE"

[node name="FileButtons" type="HBoxContainer" parent="UI/MainLayout/Sidebar/VBox/FileSection"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="BackBtn" type="Button" parent="UI/MainLayout/Sidebar/VBox/FileSection/FileButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "< Back"

[node name="SaveBtn" type="Button" parent="UI/MainLayout/Sidebar/VBox/FileSection/FileButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Sep1" type="HSeparator" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2

[node name="ModeSection" type="VBoxContainer" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ModeLabel" type="Label" parent="UI/MainLayout/Sidebar/VBox/ModeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = "EDIT MODE"

[node name="ModeButtons" type="HBoxContainer" parent="UI/MainLayout/Sidebar/VBox/ModeSection"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PathBtn" type="Button" parent="UI/MainLayout/Sidebar/VBox/ModeSection/ModeButtons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Path"

[node name="ZonesBtn" type="Button" parent="UI/MainLayout/Sidebar/VBox/ModeSection/ModeButtons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Zones"

[node name="Instructions" type="Label" parent="UI/MainLayout/Sidebar/VBox/ModeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 10
text = "Click: add point
Shift: straight line
Drag: move point
Right-click: delete"
autowrap_mode = 3

[node name="ActionButtons" type="HBoxContainer" parent="UI/MainLayout/Sidebar/VBox/ModeSection"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ClearBtn" type="Button" parent="UI/MainLayout/Sidebar/VBox/ModeSection/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="CopyBtn" type="Button" parent="UI/MainLayout/Sidebar/VBox/ModeSection/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Copy"

[node name="Sep2" type="HSeparator" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2

[node name="BGSection" type="VBoxContainer" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="BGLabel" type="Label" parent="UI/MainLayout/Sidebar/VBox/BGSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = "BACKGROUND"

[node name="LoadBGBtn" type="Button" parent="UI/MainLayout/Sidebar/VBox/BGSection"]
layout_mode = 2
text = "Load Image..."

[node name="ScaleRow" type="HBoxContainer" parent="UI/MainLayout/Sidebar/VBox/BGSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScaleLabel" type="Label" parent="UI/MainLayout/Sidebar/VBox/BGSection/ScaleRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Scale:"

[node name="ScaleSlider" type="HSlider" parent="UI/MainLayout/Sidebar/VBox/BGSection/ScaleRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.25
max_value = 3.0
step = 0.05
value = 1.0

[node name="ScaleValue" type="Label" parent="UI/MainLayout/Sidebar/VBox/BGSection/ScaleRow"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "1.00"

[node name="BGHint" type="Label" parent="UI/MainLayout/Sidebar/VBox/BGSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 9
text = "Middle-drag to move BG"

[node name="Sep3" type="HSeparator" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2

[node name="SelectionSection" type="VBoxContainer" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SelectionLabel" type="Label" parent="UI/MainLayout/Sidebar/VBox/SelectionSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = "SELECTION"

[node name="SelectionInfo" type="Label" parent="UI/MainLayout/Sidebar/VBox/SelectionSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 11
text = "None"

[node name="Sep4" type="HSeparator" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2

[node name="DataSection" type="VBoxContainer" parent="UI/MainLayout/Sidebar/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="DataLabel" type="Label" parent="UI/MainLayout/Sidebar/VBox/DataSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = "DATA"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/MainLayout/Sidebar/VBox/DataSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="Output" type="Label" parent="UI/MainLayout/Sidebar/VBox/DataSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.85, 1)
theme_override_font_sizes/font_size = 9
text = "Path: 0 points
Zones: 0"
autowrap_mode = 3

[node name="FileDialog" type="FileDialog" parent="UI"]
title = "Select Background Image"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.webp")

[connection signal="pressed" from="UI/MainLayout/Sidebar/VBox/FileSection/FileButtons/BackBtn" to="." method="_on_back_pressed"]
[connection signal="pressed" from="UI/MainLayout/Sidebar/VBox/FileSection/FileButtons/SaveBtn" to="." method="_on_save_pressed"]
[connection signal="pressed" from="UI/MainLayout/Sidebar/VBox/ModeSection/ModeButtons/PathBtn" to="." method="_on_path_pressed"]
[connection signal="pressed" from="UI/MainLayout/Sidebar/VBox/ModeSection/ModeButtons/ZonesBtn" to="." method="_on_zones_pressed"]
[connection signal="pressed" from="UI/MainLayout/Sidebar/VBox/ModeSection/ActionButtons/ClearBtn" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="UI/MainLayout/Sidebar/VBox/ModeSection/ActionButtons/CopyBtn" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="UI/MainLayout/Sidebar/VBox/BGSection/LoadBGBtn" to="." method="_on_load_bg_pressed"]
[connection signal="value_changed" from="UI/MainLayout/Sidebar/VBox/BGSection/ScaleRow/ScaleSlider" to="." method="_on_scale_changed"]
[connection signal="file_selected" from="UI/FileDialog" to="." method="_on_file_selected"]
